WEB-7517 Moved JerseyConfig into core module. Modified poms to try and only include the necessary libraries that are needed at runtime.